implement create bundle method
